Start combine aref + main

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -428,36 +428,7 @@
 дисертаційної роботи, які виносяться на захист, отримано здобувачем особисто та
 опубліковано в роботах [1--50]. У наукових працях, опублікованих у співавторстві,
 здобувачу належать наступні результати.
-У роботі~[1] створено критерій ти система ідентифікації системи Дуффінга.
-У роботах~[2,42] створено критерій ти система ідентифікації системи Ресслера.
-У роботі~[3] досліджено критерії ідентифікації для групи хаотичних систем.
-У роботах~[4,17,32] досліджено вплив збурень на процес ідентифікації.
-У роботах~[5,6,40] зроблено аналіз можливих критеріїв для системи Ван-дер-Поля.
-У роботах~[7,41] розроблено та використано критерій для системи Чуа.
-У роботі~[8] запропонована та досліджена хаотична система релаксаційних генераторів.
-У роботі~[9] створено систему ідентифікації з зоною нечутливості.
-У роботах~[10,45] проаналізована динаміка базової моделі Колпітца та її ідентифікація.
-У роботі~[11] досліджено влив параметрів системи ідентифікації на її характеристики.
-У роботах~[12,13,15] запропоновано метод розширення робочого діапазону та якості системи ідентифікації.
-У роботі~[14] розглянуто фізичні передумови для синтезу критерію.
-У роботі~[16] створено один з методів роботи агенту ідентифікації.
-У роботах~[18,19,29,49,50] запропоновано метод ідентифікації з множиною моделей.
-У роботі~[20] запропоновано критерій ефективності.
-У роботі~[21,46] досліджено вплив параметрів багатомодельної системи ідентифікації.
-У роботі~[22] досліджено параметри системи багатомодельної ідентифікації.
-У роботі~[23] проведено перевірку можливості використання діаграм Пуанкаре для ідентифікації.
-У роботі~[24] розроблено та досліджено новий хаотичний генератор на основі системи релаксаційних елементів.
-У роботі~[25] досліджено процес взаємодії трьох пошукових агентів.
-У роботі~[26] проведено аналіз потрібного діапазону при вимірюванні.
-У роботі~[27] досліджено вплив релаксаційного генератора на точність позиціювання.
-У роботі~[28] створено критерій ти система ідентифікації системи ''Sprott~A''.
-У роботі~[30] запропоновано інформаційні методи оцінки складності задачі ідентифікації.
-У роботі~[31,38] обґрунтовано використання фізичних принципів при створенні критерію.
-У роботі~[33] проведено порівняльний аналіз критеріїв.
-У роботі~[34,43,47,48] використано фізичні принципи при ідентифікації систем Лоренца.
-У роботі~[35,44] досліджено хаотичну систему з гістерезисом та процес її ідентифікації.
-У роботі~[36,39] проведено аналіз процесів ідентифікації параметрів для групи хаотичних систем.
-У роботі~[37] досліджено рівноважні стани агентів ідентифікації поблизу екстремуму.
+\input{parts_in_articles.tex}
 
 
 
