--- a/atuworks.bib
+++ b/atuworks.bib
@@ -3,7 +3,7 @@
 @string{ mai  = "Михалёв, А. И." }
 @string{ atum = "Гуда, А. И. and Михалёв, А. И." }
 @string{ atume= "Guda, A. I. and Mikhalyov, A. I." }
-@string{ kher= {Вестник Херсонского национального технического университета" (РИНЦ)} }
+@string{ kher= {Вестник Херсонского национального технического университета (РИНЦ)} }
 
 @xdata{asau,
   journal = {Адаптивні системи автоматичного управління. Міжвідом. науково-техн. зб. (РИНЦ)},
