--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,36 +2,77 @@
 \phantomsection
 \chapter*{Выводы}
 
-В целом, применение рассмотренных видов критериев, в совокупности
-с мультимодельными (мультиагентными) методами поисковой идентификации
-оказалось продуктивным и показало их
-работоспособность для рассмотренных хаотических, и в какой-то мере эквивалентным им
-сложных динамических систем.
 
+У роботі вирішена науково-технічна проблема ідентифікації параметрів складних технічних
+систем у режимі хаотичної динаміки
+з метою забезпечення їх керованої поведінки. При цьому:
 
+\begin{itemize}
 
-Для большинства из рассмотренных систем вид критерия
-был получен практически автоматически, из анализа полученных
-в результате моделирования зависимостей, имеющих прямое или косвенное отношение
-к энергетическим параметрам. Для системы с сухим трением,
-синтез критерия был основан на явных физических зависимостях.
-Созданные критерии позволяют реализовать процесс идентификации для случаев
-сложной или же хаотической динамики,
-когда полностью отсутствуют хоть какая-нибудь информация о
-трендовом поведении объекта, и невозможно получить аналитическую
-или же статистическую связь между параметрами и выходом системы.
+  \item
+    створено нові критерії ідентифікації, які, на відміну від тих, що
+    існують, придатні для аналізу стану та динаміки
+    хаотичних систем, що створить фізично зумовлене обґрунтування працездатності систем
+    ідентифікації;
 
-Одновременная настройка параметров нескольких моделей ансамблем поисковых агентов
-позволила максимально преодолеть противоречие между скоростью и точностью
-идентификации. При таком подходе время идентификации определяется
-временем реакции идентифицируемой системы на изменение параметра.
-Для систем со сложной, а тем более хаотической динамикой это время достигает
-значительных величин, по сравнению с характерными временами самой динамики системы.
+  \item
+    створено новий клас систем ідентифікації у межах
+    адаптивно-пошуковой парадигми,
+    які за рахунок використання колективної динаміки
+    ансамблю пошукових агентів забезпечують
+    кращу швидкість ідентифікації без істотного впливу на похибку ідентифікації;
 
+  \item
+    проведена перевірка працездатності запропонованих методів
+    на прикладах як відомих систем хаотичної динаміки,
+    так і на декількох інших динамічних систем, які проявляють
+    складну та хаотичну динаміку;
 
-Полученные зависимости ошибок идентификации от параметров
-самой системы идентификации, с одной стороны, позволяют
-правильно настроить эти параметры для получения максимально быстрой
-и точной идентификации. С другой стороны, эти зависимости
-характеризуют связь свойств идентифицируемого объекта с
-требуемыми качествами самой системы идентификации.
+  \item
+   визначено, що системи з сухим тертям з точки зору задачі ідентифікації
+   при певних  умовах функціонування
+   мають властивості, що поєднують їх з системами хаотичної динаміки;
+
+ \item
+  створено програмне забезпечення, придатне для моделювання як систем
+  хаотичної динаміки, так і систем мультиагентної ідентифікації;
+
+  \item
+  проведено як комп'ютерне моделювання процесів ідентифікації систем
+  хаотичної динаміки, так і фізичне моделювання таких, що підтверджує адекватність
+  побудованих моделей.
+
+\end{itemize}
+
+% В целом, применение рассмотренных видов критериев, в совокупности
+% с мультимодельными (мультиагентными) методами поисковой идентификации
+% оказалось продуктивным и показало их
+% работоспособность для рассмотренных хаотических, и в какой-то мере эквивалентным им
+% сложных динамических систем.
+%
+% Для большинства из рассмотренных систем вид критерия
+% был получен практически автоматически, из анализа полученных
+% в результате моделирования зависимостей, имеющих прямое или косвенное отношение
+% к энергетическим параметрам. Для системы с сухим трением,
+% синтез критерия был основан на явных физических зависимостях.
+% Созданные критерии позволяют реализовать процесс идентификации для случаев
+% сложной или же хаотической динамики,
+% когда полностью отсутствуют хоть какая-нибудь информация о
+% трендовом поведении объекта, и невозможно получить аналитическую
+% или же статистическую связь между параметрами и выходом системы.
+%
+% Одновременная настройка параметров нескольких моделей ансамблем поисковых агентов
+% позволила максимально преодолеть противоречие между скоростью и точностью
+% идентификации. При таком подходе время идентификации определяется
+% временем реакции идентифицируемой системы на изменение параметра.
+% Для систем со сложной, а тем более хаотической динамикой это время достигает
+% значительных величин, по сравнению с характерными временами самой динамики системы.
+%
+%
+% Полученные зависимости ошибок идентификации от параметров
+% самой системы идентификации, с одной стороны, позволяют
+% правильно настроить эти параметры для получения максимально быстрой
+% и точной идентификации. С другой стороны, эти зависимости
+% характеризуют связь свойств идентифицируемого объекта с
+% требуемыми качествами самой системы идентификации.
+
