--- a/litlist_atu.tex
+++ b/litlist_atu.tex
@@ -1,278 +1,279 @@
 \begin{enumerate}
 
-
-
 \item
-Гуда А. И., Михалёв А. И., Новикова Е. Ю. Синтез критерия идентификации нелинейных
-динамических систем на физических принципах // Адаптивнi системи автоматичного
-управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2008. --- 11(31). --- С. 136--142.
-
-\item
-Гуда А. И., Михалёв А. И. Адаптивно-поисковая идентификация хаотической динамической
+Гуда~А.И., Михалёв~А.И. Адаптивно-поисковая идентификация хаотической динамической
 системы Дуффинга // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2008. --- 12(32). --- С. 166--171.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2008. -- 12(32). -- С.~166--171.
 
 \item
-Гуда А. И., Михалёв А. И. Адаптивно-поисковая идентификация хаотической динамической
-системы Рёсслера // Адаптивнi системи автоматичного управлiння. Мiжвiдом.
-науково-техн. зб. (РИНЦ). --- Днепропетровск, 2009. --- 14(34). --- С. 125--129.
+Гуда~А.И., Михалёв~А.И. Адаптивно-поисковая идентификация хаотической
+динамической системы Рёсслера // Адаптивнi системи автоматичного управлiння. Мiжвiдом.
+науково-техн. зб. (РИНЦ). -- Днепропетровск, 2009. -- 14(34). -- С.~125--129.
 
 \item
-Guda A. I., Mikhalyov A. I. Multi-model methods and parameters estimation approaches
-on non-linear dynamic system identification // Системнi технологiї. Регiональний мiжвузiвський
-збiрник наукових праць (Index Copernicus). --- Днепропетровск, 2015. --- 4(99). --- С. 3--9.
+Гуда~А.И., Михалёв~А.И., Деревянко~А.И. Критерии идентификации параметров
+хаотической динамики управляемого объекта // Автомобiльний транспорт. --
+Вiсник Харкiвського нацiонального автодорожнього унiверситету. (РИНЦ). -- 2009. -- No 25. -- С.~254--257.
 
 \item
-Guda A. I., Mikhalyov A. I. Multi-model identification system properties near extremum:
-simulations and analysis // Journal of Applied Computer Science – JACS-2015. --- 2015. --- 23(2). --- С. 21--28.
+Гуда~А.И., Михалёв~А.И. Влияние возмущений входного сигнала на динамику и
+идентификацию нелинейной системы Дуффинга // Адаптивнi системи автоматичного управлiння.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2010. -- 15(35). -- С.~121--125.
 
 \item
-Гуда А. И., Михалёв А. И. Выбор критерия при адаптивно-поисковой идентификации
+Гуда~А.И., Михалёв~А.И. Выбор критерия при адаптивно-поисковой идентификации
 динамической системы Ван-Дер-Поля // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2010. --- 16(36). --- С. 154--160.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2010. -- 16(36). -- С.~154--160.
 
 \item
-Гуда А. И., Михалёв А. И. Использование нечётких технологий при выборе начальных
-условий в задачах идентификации систем с хаотической динамикой // Адаптивнi системи
-автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2014. --- 2(25). --- С. 98--103.
+Гуда~А.И., Михалёв~А.И. Исследование альтернативного критерия при адаптивно-поисковой
+идентификации динамической системы Ван-Дер-Поля
+// Адаптивнi системи автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ).
+-- Днепропетровск, 2010. -- 17(37). -- С.~149--154.
 
 \item
-Guda A. I., Mikhalyov A. I. Method of Lorenz systems parametric identification by the
-searching models ensemble // Scientific and Technical Conference ``Computer Sciences and
-Information Technologies'' (CSIT) (Scopus). --- 2015. --- С. 73--75. --- DOI: 10.1109/STC-CSIT.2015.7325435.
+Гуда~А.И., Михалёв~А.И. Синтез критерия при адаптивно-поисковой идентификации
+динамической системы Чуа // Адаптивнi системи автоматичного управлiння.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2011. -- 18(38). -- С.~140--146.
 
 \item
-Гуда А. И., Михалёв А. И. Информационные оценки сложности задачи параметрической
-идентификации динамических систем // Адаптивнi системи автоматичного
-управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2007. --- 10(30). --- С. 96--103.
+Гуда~А.И., Михалёв~А.И. Моделирование и исследование хаотической динамики
+связанных релаксационных генераторов // Адаптивнi системи автоматичного управлiння.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2011. -- 19(39). -- С.~164--170.
 
 \item
-Гуда А. И., Михалёв А. И., Деревянко А. И. Критерии идентификации параметров хаотической
-динамики управляемого объекта // Автомобiльний транспорт. – Вiсник Харкiвського
-нацiонального автодорожнього унiверситету. --- 2009. --- No 25. --- С. 254--257.
+Гуда~А.И., Михалёв~А.И. Моделирование хаотической динамики системы с зоной
+нечувствительности и идентификация её параметров
+// Адаптивнi системи автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ).
+ -- Днепропетровск, 2012. -- 20(40). -- С.~180--186.
 
 \item
-Гуда А. И., Михалёв А. И. Влияние возмущений входного сигнала на динамику и
-идентификацию нелинейной системы Дуффинга // Адаптивнi системи автоматичного
-управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2010. ---
-15(35). --- С. 121--125.
-
-\item
-Гуда А. И., Михалёв А. И. Исследование альтернативного критерия при адаптивно-поисковой
-идентификации динамической системы Ван-Дер-Поля // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2010. --- 17(37). --- С. 149--154.
-
-\item
-Гуда А. И., Михалёв А. И. Сравнительный анализ двух критериев адаптивно-поисковой
-идентификации нелинейной динамической системи Ван-Дер-Поля // Системнi технологiї.
-Регiональний мiжвузiвський збiрник наукових праць. --- Днепропетровск,
-2011. --- 4(75). --- С. 15--20.
-
-\item
-Гуда А. И., Михалёв А. И. Синтез критерия при адаптивно-поисковой идентификации
-динамической системы Чуа // Адаптивнi системи автоматичного управлiння. Мiжвiдом.
-науково-техн. зб. (РИНЦ). --- Днепропетровск, 2011. --- 18(38). --- С. 140--146.
-
-\item
-Гуда А. И., Михалёв А. И., Дмитриева И. С. Особенности моделирования и идентификации
-хаотической системы Ресслера с возмущениями // Системнi технологiї. Регiональний
-мiжвузiвський збiрник наукових праць. --- Днепропетровск, 2010. --- 2(67). --- С. 114--118.
-
-\item
-Гуда А. И., Михалёв А. И. Моделирование и исследование хаотической динамики связанных
-релаксационных генераторов // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2011. --- 19(39). --- С. 164--170.
-
-\item
-Гуда А. И., Михалёв А. И. Физические основы при синтезе критерия адаптивно-поисковой
-идентификации динамической системы Лоренса // Системнi технологiї. Регiональний мiжвузiвський
-збiрник наукових праць. --- Днепропетровск, 2012. --- 2(79). --- С. 13--19.
-
-\item
-Guda A. I., Mikhalyov A. I. Chaotic system with relay hysteresis in return force: simulation
-and analysis // Системнi технологiї. Регiональний мiжвузiвський збiрник наукових
-праць (Index Copernicus). --- Днепропетровск, 2013. --- 2(85). --- С. 30--35.
-
-\item
-Гуда А. И., Михалёв А. И. Моделирование хаотической динамики системы с зоной
-нечувствительности и идентификация её параметров // Адаптивнi системи автоматичного
-управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2012. ---
-20(40). --- С. 180--186.
-
-\item
-Гуда А. И., Михалёв А. И. Генератор Колпитца: моделирование хаотической динамики
+Гуда~А.И., Михалёв~А.И. Генератор Колпитца: моделирование хаотической динамики
 и параметрическая идентификация // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2012. --- 21(41). --- С. 146--153.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2012. -- 21(41). -- С.~146--153.
 
 \item
-Guda A. I., Mikhalyov A. I. Influence of input and measurement noise to Lorenz system
-adaptive-searching identification // Системнi технологiї. Регiональний мiжвузiвський
-збiрник наукових праць (Index Copernicus). --- Днепропетровск, 2014. --- 2(91). --- С. 154--158.
+Гуда~А.И., Михалёв~А.И. Настройка адаптивно-поисковой системы идентификации
+применительно к хаотическим объектам // Адаптивнi системи автоматичного
+управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2013. -- 1(22). --
+С.~134--139.
 
 \item
-Гуда А. И., Михалёв А. И. Настройка адаптивно-поисковой системы идентификации применительно
-к хаотическим объектам // Адаптивнi системи автоматичного
-управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2013. --- 1(22). ---
-С. 134--139.
-
-\item
-Гуда А. И., Михалёв А. И. Расширение рабочего диапазона поисковой идентификации
+Гуда~А.И., Михалёв~А.И. Расширение рабочего диапазона поисковой идентификации
 нелинейных динамических систем // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2013. --- 2(23). --- С. 133--127.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2013. -- 2(23). -- С.~133--127.
 
 \item
-Гуда А. И., Михалёв А. И. Повышение качества фильтрации при поисковой идентификации
+Гуда~А.И., Михалёв~А.И. Повышение качества фильтрации при поисковой идентификации
 нелинейных динамических систем // Адаптивнi системи автоматичного
-управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2014. --- 1(24). --- С. 160--165.
+управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2014. -- 1(24). -- С.~160--165.
 
 \item
-Physical background in identification criterion synthesis / A. I. Guda, A. I. Mikhalyov,
-A. I. Derevjanko, P. Kisa la // Elektronika konstrukcje, technologie, zastosowania (Index
-Copernicus). --- 2013. --- No 8. --- С. 32--34.
+Physical background in identification criterion synthesis /
+A.I.~Guda, A.I.~Mikhalyov, A.I.~Derevjanko, P.~Kisala
+// Elektronika konstrukcje, technologie, zastosowania (Index Copernicus). -- 2013. -- No 8. -- С.~32--34.
 
 \item
-Гуда А. И., Михалёв А. И. Расширение рабочего диапазона при поисковой идентификации
+Гуда~А.И., Михалёв~А.И. Расширение рабочего диапазона при поисковой идентификации
 хаотической системы Чуа // Вестник Херсонского национального технического
-университета"(РИНЦ). --- 2014. --- 3(50). --- С. 265--258.
+университета (РИНЦ). -- 2014. -- 3(50). -- С.~265--258.
 
 \item
-Гуда А. И., Михалёв А. И. Использование метода идентификации с множеством
-подвижных моделей применительно к динамической системе Лоренса // Адаптивнi системи
-автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2015.
---- 1(26). --- С. 191--197.
+Гуда~А.И., Михалёв~А.И. Использование нечётких технологий при выборе начальных
+условий в задачах идентификации систем с хаотической динамикой
+// Адаптивнi системи автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ).
+-- Днепропетровск, 2014. -- 2(25). -- С.~98--103.
+
+\item
+Guda~A.I., Mikhalyov~A.I. Influence of input and measurement noise to Lorenz system
+adaptive-searching identification // Системнi технологiї. Регiональний мiжвузiвський
+збiрник наукових праць (Index Copernicus). -- Днепропетровск, 2014. -- 2(91). -- С.~154--158.
+
+\item
+Guda~A.I., Mikhalyov~A.I. Multi-model methods and parameters estimation approaches
+on non-linear dynamic system identification //
+Системнi технологiї. Регiональний мiжвузiвський збiрник наукових праць (Index Copernicus).
+ -- Днепропетровск, 2015. -- 4(99). -- С.~3--9.
+
+\item
+Гуда~А.И., Михалёв~А.И. Использование метода идентификации с множеством
+подвижных моделей применительно к динамической системе Лоренса
+// Адаптивнi системи автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ).
+-- Днепропетровск, 2015. -- 1(26). -- С.~191--197.
 
 \item
 Система поддержки принятия решений по повышению эффективности гидроаеродинамических
 процессов во вспомогательных элементах энергетических агрегатов /
-Е. А. Арсирий, С. Г. Антощук, В. А. Арсирий, А. И. Гуда // Управляющие системы и машины (РИНЦ).
---- 2015. --- No 6. --- С. 43--50.
+Е.А.~Арсирий, С.Г.~Антощук, В.А.~Арсирий, А.И.~Гуда // Управляющие системы и машины (РИНЦ).
+-- 2015. -- No 6. -- С.~43--50.
 
 \item
-Гуда А. И., Михалёв А. И. Настройка параметров системы мультимодельной
-адаптивно-поисковой системы идентификации // Вестник Херсонского национального
-технического университета"(РИНЦ). --- 2015. --- 3(54). --- С. 138--243.
+Гуда~А.И., Михалёв~А.И. Настройка параметров системы мультимодельной
+адаптивно-поисковой системы идентификации
+// Вестник Херсонского национального технического университета (РИНЦ). -- 2015. -- 3(54). -- С.~138--243.
 
 \item
-Guda A. I., Mikhalyov A. I. Multi-model methods and parameters estimation approaches
+Guda~A.I., Mikhalyov~A.I. Multi-model methods and parameters estimation approaches
 on non-linear dynamic system identification // Системнi технологiї. Регiональний мiжвузiвський
-збiрник наукових праць (Index Copernicus). --- Днепропетровск, 2016. --- 2(103). --- С. 57--62.
+збiрник наукових праць (Index Copernicus). -- Днепропетровск, 2016. -- 2(103). -- С.~57--62.
 
 \item
-Визначення гранулометричного складу матерiалу у повiтряному потоцi з використанням
-дiаграм Пуанкаре / Р. О. Сухомлин, А. И. Михальов, Н. С. Прядко, К. В. Тернова, А. И. Гуда
-// Системнi технологiї. Регiональний мiжвузiвський збiрник наукових
-праць (Index Copernicus). --- Днепропетровск, 2016. --- 4(105). --- С. 18--24.
+Визначення гранулометричного складу матерiалу у повiтряному потоцi з використанням дiаграм Пуанкаре
+/ Р.О.~Сухомлин, А.И.~Михальов, Н.С.~Прядко, К.В.~Тернова, А.И.~Гуда
+// Системнi технологiї. Регiональний мiжвузiвський збiрник наукових праць (Index Copernicus).
+-- Днепропетровск, 2016. -- 4(105). -- С.~18--24.
 
 \item
-Гуда А. И. A low-voltage coupled relaxation generator with chaotic behavior: simulation,
+Гуда~А.И. A low-voltage coupled relaxation generator with chaotic behavior: simulation,
 measurement and identification // Системнi технологiї. Регiональний мiжвузiвський
-збiрник наукових праць (Index Copernicus). --- Днепропетровск, 2016. --- 4(105). --- С. 57--65.
+збiрник наукових праць (Index Copernicus). -- Днепропетровск, 2016. -- 4(105). -- С.~57--65.
 
 \item
-Guda A. I., Mikhalyov A. I. Three-model methods for extremum extimation in non-linear
-dynamic system identification // Адаптивнi системи автоматичного управлiння.
-Мiжвiдом. науково-техн. зб. (РИНЦ). --- Днепропетровск, 2016. --- 2(27). --- С. 160--165.
+Guda~A.I., Mikhalyov~A.I. Three-model methods for extremum extimation in non-linear
+dynamic system identification
+// Адаптивнi системи автоматичного управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ).
+ -- Днепропетровск, 2016. -- 2(27). -- С.~160--165.
 
 \item
-Зимогляд А. Ю., Гуда А. И. Особливостi використання HX711 для отримання даних з
+Зимогляд~А.Ю., Гуда~А.И. Особливостi використання HX711 для отримання даних з
 тензодатчика // Системнi технологiї. Регiональний мiжвузiвський збiрник наукових
-праць (Index Copernicus). --- Днепропетровск, 2016. --- 3(104). --- С. 136--140.
+праць (Index Copernicus). -- Днепропетровск, 2016. -- 3(104). -- С.~136--140.
 
 \item
-Левченко Д., Гуда А. И. Виявлення залежностi кута повороту сервоприводу вiд вхiдного
+Левченко~Д., Гуда~А.И. Виявлення залежностi кута повороту сервоприводу вiд вхiдного
 iмпульсу // Системнi технологiї. Регiональний мiжвузiвський збiрник наукових праць
-(Index Copernicus). --- Днепропетровск, 2016. --- 3(104). --- С. 141--146.
+(Index Copernicus). -- Днепропетровск, 2016. -- 3(104). -- С.~141--146.
 
 \item
-Гуда А. И., Михалёв А. И. Синтез критерия для идентификации хаотической системы ``Sprott A''
-с использованием мультимодельного адаптивно-поискового метода //
-Вестник Херсонского национального технического университета"(РИНЦ). --- Херсон,
-2016. --- 3(58). --- С. 204--207.
+Гуда~А.И., Михалёв~А.И. Синтез критерия для идентификации хаотической системы
+``Sprott A'' с использованием мультимодельного адаптивно-поискового метода //
+Вестник Херсонского национального технического университета(РИНЦ). -- Херсон,
+2016. -- 3(58). -- С.~204--207.
 
 \item
-Guda A. I., Mikhalyov A. I. Multi-models identification methods comparison in the non-linear
+Guda~A.I., Mikhalyov~A.I. Multi-models identification methods comparison in the nonlinear
 dynamic system identification task // Радиоэлектроника, информатика, управление (Web of Science).
---- Запорiжжя, ЗНТУ, 2016. --- No 4. --- С. 112--119. --- DOI: 10 . 15588/1607-3274-2016-4-14.
+-- Запорiжжя, ЗНТУ, 2016. -- No 4. -- С.~112--119. -- DOI: 10.15588/1607-3274-2016-4-14.
+
+% vak: s=30
+\item
+Гуда~А.И., Михалёв~А.И. Информационные оценки сложности задачи параметрической
+идентификации динамических систем // Адаптивнi системи автоматичного
+управлiння. Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2007. -- 10(30). -- С.~96--103.
 
 \item
-Гуда А. И., Михалёв А. И. Оценивание эффективности применения интегральных критериев в задачах
-параметрической идентификации хаотических систем // Коллективная монография
-``Системные технологии моделирования сложных систем'' под. ред.
-Михалёва А.И. --- Днепр, 2016. --- С. 200--229.
+Гуда~А.И., Михалёв~А.И., Новикова~Е.Ю. Синтез критерия идентификации нелинейных
+динамических систем на физических принципах // Адаптивнi системи автоматичного управлiння.
+Мiжвiдом. науково-техн. зб. (РИНЦ). -- Днепропетровск, 2008. --
+11(31). -- С.~136--142.
 
 \item
-Гуда А. И., Михалёв А. И. Выбор критериев для оценки эффективности процессов идентификации
-систем с хаотической динамикой // Матерiали Всеукраїнської науково-практичної конференцiї
-``Iнформатика та системнi науки'' (IСН-2011).
---- Полтава, 17-19.03.2011. --- Полтава: РВВ ПУЕТ. --- 2011. --- С. 355.
+Гуда~А.И., Михалёв~А.И., Дмитриева~И.С.~Особенности моделирования и идентификации
+хаотической системы Ресслера с возмущениями // Системнi технологiї. Регiональний мiжвузiвський збiрник наукових праць.
+-- Днепропетровск, 2010. -- 2(67). -- С.~114--118.
 
 \item
-Гуда А. И., Михалёв А. И. Идентификация систем с хаотической динамикой
+Гуда~А.И., Михалёв~А.И. Сравнительный анализ двух критериев адаптивно-поисковой
+идентификации нелинейной динамической системи Ван-Дер-Поля // Системнi технологiї.
+Регiональний мiжвузiвський збiрник наукових праць. -- Днепропетровск, 2011. -- 4(75). -- С.~15--20.
+
+\item
+Гуда~А.И., Михалёв~А.И. Физические основы при синтезе критерия адаптивно-поисковой идентификации
+динамической системы Лоренса // Системнi технологiї.
+Регiональний мiжвузiвський збiрник наукових праць. -- Днепропетровск, 2012. -- 2(79). -- С.~13--19.
+
+\item
+Guda~A.I., Mikhalyov~A.I. Chaotic system with relay hysteresis in return force: simulation
+and analysis // Системнi технологiї. Регiональний мiжвузiвський збiрник наукових
+праць. -- Днепропетровск, 2013. -- 2(85). -- С.~30--35.
+
+\item
+Гуда~А.И., Михалёв~А.И. Оценивание эффективности применения интегральных критериев
+в задачах параметрической идентификации хаотических систем
+// Коллективная монография ``Системные технологии моделирования сложных систем'' под. ред.
+Михалёва А.И. -- Днепр, 2016. -- С.~200--229.
+
+% fore: 37
+\item
+Guda~A.I., Mikhalyov~A.I. Multi-model identification system properties near extremum:
+simulations and analysis // Journal of Applied Computer Science – JACS-2015. -- 2015. --
+23(2). -- С.~21--28.
+
+% conf: 38
+\item
+Гуда~А.И., Михалёв~А.И. Выбор критериев для оценки эффективности
+процессов идентификации систем с хаотической динамикой // Матерiали Всеукраїнської науково-практичної
+конференцiї ``Iнформатика та системнi науки'' (IСН-2011). – Полтава, 17-19.03.2011. – Полтава: РВВ ПУЕТ. -- 2011. -- С.~355.
+
+\item
+Гуда~А.И., Михалёв~А.И. Идентификация систем с хаотической динамикой
 // Материалы международной конференции ``Интеллектуальные системы принятия решений и
-проблемы вычислительного интеллекта'' (ISDMCI) (май 2011).
---- Херсон: ХНТУ : ХН-ТУ, 2011. --- С. 211--212.
+проблемы вычислительного интеллекта'' (ISDMCI) (май 2011). -- Херсон: ХНТУ : ХНТУ, 2011. -- С.~211--212.
 
 \item
-Гуда А. И., Михалёв А. И. Адаптивно-поисковая идентификация нелинейной динамической
-системы Ван-дер-Поля // Информационные технологии в управлении сложными системами.
-Сборник докладов научной конференции – Днепропетровск:
-изд-во ``Свидлер А.Л.'' --- Днепропетровск, 07.2011. --- С. 39--40.
+Гуда~А.И., Михалёв~А.И. Адаптивно-поисковая идентификация нелинейной динамической системы Ван-дер-Поля
+// Информационные технологии в управлении сложными системами. Сборник докладов научной конференции – Днепропетровск:
+ изд-во ``Свидлер А.Л.'' -- Днепропетровск, 07.2011. -- С.~39--40.
 
 \item
-Гуда А. И., Михалёв А. И. Адаптивно-поисковая идентификация нелинейной хаотической
-системы Чуа // Материалы международной научно-технической конференции
-``Автоматизация: проблемы, идеи, решения'' (сент. 2011). --- Севастополь : СевНТУ,
-2011. --- С. 18--19.
+Гуда~А.И., Михалёв~А.И. Адаптивно-поисковая идентификация нелинейной хаотической системы Чуа
+// Материалы международной научно-технической конференции
+``Автоматизация: проблемы, идеи, решения'' (сент. 2011). -- Севастополь : СевНТУ,
+2011. -- С.~18--19.
 
 \item
-Гуда А. И., Михалёв А. И. Альтернативный критерий идентификации хаотической системы Рёсслера
-// Материалы международной конференции ``Интеллектуальные системы принятия решений
-и проблемы вычислительного интеллекта'' (ISDMCI). ---
-Херсон: ХНТУ : ХНТУ, 2012. --- С. 247--249.
+Гуда~А.И., Михалёв~А.И. Альтернативный критерий идентификации хаотической системы Рёсслера
+ // Материалы международной конференции
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI). --
+Херсон: ХНТУ : ХНТУ, 2012. -- С.~247--249.
 
 \item
-Гуда А. И., Михалёв А. И. Синтез критерия идентификации нелинейной хаотической
+Гуда~А.И., Михалёв~А.И. Синтез критерия идентификации нелинейной хаотической
 системы Лоренса // Материалы международной научно-технической конференции
-``Автоматизация: проблемы, идеи, решения'' (сент. 2012). --- Севастополь : СевНТУ,
-2012. --- С. 11--13.
+``Автоматизация: проблемы, идеи, решения'' (сент. 2012). -- Севастополь : СевНТУ,
+2012. -- С.~11--13.
 
 \item
-Гуда А. И., Михалёв А. И. Хаотические колебательные системы с зоной нечувствительности
-и релейным гистерезисом в восстанавливающей силе // Материалы международной конференции
-``Интеллектуальные системы принятия решений и проблемы
-вычислительного интеллекта'' (ISDMCI). --- Херсон: ХНТУ : ХНТУ, 2013. --- С. 434--435.
+Гуда~А.И., Михалёв~А.И. Хаотические колебательные системы с зоной нечувствительности
+ и релейным гистерезисом в восстанавливающей силе
+// Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы
+вычислительного интеллекта'' (ISDMCI). -- Херсон: ХНТУ : ХНТУ, 2013. -- С.~434--435.
 
 \item
-Гуда А. И., Михалёв А. И. Идентификация бифуркационного параметра генератора
+Гуда~А.И., Михалёв~А.И. Идентификация бифуркационного параметра генератора
 Колптица // Материалы международной научно-технической конференции
-``Автоматизация: проблемы, идеи, решения'' (сент. 2013). --- Севастополь : СевНТУ, 2013. ---
-С. 104--105.
+ ``Автоматизация: проблемы, идеи, решения'' (сент. 2013). -- Севастополь : СевНТУ, 2013. -- С.~104--105.
 
 \item
-Гуда А. И., Михалёв А. И. Совместное влияние изменений параметров системы
+Гуда~А.И., Михалёв~А.И. Совместное влияние изменений параметров системы
 адаптивно-поисковой идентификации хаотических систем объектов на процесс поиска
-// Материалы международной конференции ``Интеллектуальные системы принятия
-решений и проблемы вычислительного интеллекта'' (ISDMCI). --- Херсон: ХН-ТУ : ХНТУ, 2014. --- С. 63--64.
+// Материалы международной конференции
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI).
+ -- Херсон: ХНТУ : ХНТУ, 2014. -- С.~63--64.
 
 \item
-Гуда А. И., Михалёв А. И. Применение многомодельного метода в задаче параметрической
+Гуда~А.И., Михалёв~А.И. Применение многомодельного метода в задаче параметрической
 идентификации хаотической системы Лоренса // Материалы международной
-конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта''
-(ISDMCI). --- Херсон: ХНТУ : ХНТУ, 2015. --- С. 53--54.
+конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI).
+ -- Херсон: ХНТУ : ХНТУ, 2015. -- С.~53--54.
 
 \item
-Гуда А. И., Михалёв А. И. Применение различных функций качества идентификации
-при использовании ансамбля поисковых агентов в задаче идентификации нелинейных
-динамических систем // Материалы международной конференции
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта''
-(ISDMCI). --- Херсон: ХНТУ : ХНТУ, 2016. --- С. 53--54.
+Guda~A.I., Mikhalyov~A.I. Method of Lorenz systems parametric identification by the
+searching models ensemble // Scientific and Technical Conference ``Computer Sciences and
+Information Technologies'' (CSIT) (Scopus). -- 2015. -- С.~73--75. -- DOI: 10.1109/STC-CSIT.2015.7325435.
 
 \item
-Guda A. I., Mikhalyov A. I. Criteria synthesis problem for the chaotic systems identification //
+Гуда~А.И., Михалёв~А.И. Применение различных функций качества идентификации
+при использовании ансамбля поисковых агентов в задаче идентификации нелинейных динамических систем
+// Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта''
+(ISDMCI). -- Херсон: ХНТУ : ХНТУ, 2016. -- С.~53--54.
+
+\item
+Guda~A.I., Mikhalyov~A.I. Criteria synthesis problem for the chaotic systems identification //
 Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and
-Processing, DSMP 2016, (Web of Science, Scopus, РИНЦ). --- Lviv, Ukraine, 08.2016. ---
-С. 125--128.
+Processing, DSMP 2016, (Web of Science, Scopus, РИНЦ, CrossRef). -- Lviv, Ukraine,
+08.2016. -- С.~125--128. -- DOI: 10.1109/DSMP.2016.7583522.
 
 \end{enumerate}
 
-% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
+% vim:  ft=tex noautoindent nosmartindent nocindent
