--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -4,10 +4,10 @@
 \paragraph{Актуальность темы}
 \pdfbookmark[1]{Актуальность темы}{actualitybookmark}
 
-Нелінійні динамічні системи, широко представлені в сучасних технологічних і
+Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
 природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
 хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
-впливах і параметрах самої системи призводять до значних, але кінцевим збуренням
+впливах і параметрах самої системи призводять до значних, але кінцевих збурень
 вихідного сигналу. Це призводить до певних труднощів при конструюванні,
 управлінні і прогнозі поведінки таких систем.
 
@@ -31,15 +31,15 @@
 
 Також вважається доцільним використання як основи
 наступного класу двомодельних адаптивно-пошукових методів,
-які було розроблено та досліджено у попередньої роботі.
+які було розроблено та досліджено у попередній роботі.
 Проте, результати моделювання процесів ідентифікації цими методами
 технічних об'єктів, які проявляють складну та хаотичну динаміку, показали
 їх повну або обмежену непридатність.
 
 
-Тому проблема ідентифікації динамічних систем, які проявляють хаотичну
-динаміку, або близьку до хаотичної, є
-\textit{актуальною}.
+Тому проблема
+ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки
+є \textit{актуальною}.
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
@@ -133,7 +133,7 @@
 технічні системи, які в процесі їх функціювання можуть
 входити в хаотичні режими.
 
-\textit{Предметом дослідження} ---
+\textit{Предмет дослідження} ---
 математичні моделі процесів та методи
 мультіагентної ідентифікації технічних систем з хаотичною динамікою.
 
@@ -253,7 +253,8 @@
 Усі основні положення і результати
 дисертаційної роботи, які виносяться на захист, отримано здобувачем особисто та
 опубліковано в роботах [1--50]. У наукових працях, опублікованих у співавторстві,
-здобувачу належать наступні результати. У роботі [1] \ldots
+здобувачу належать наступні результати.
+\input{parts_in_articles.tex}
 
 \paragraph{Апробація результатів}
 
@@ -278,10 +279,10 @@
 
 \paragraph{Публікації}
 
-По темі дисертації опубліковано
-50 друкована праця,
+З темі дисертації опубліковано
+50 наукових праць,
 з них
-24 входять до міжнародних наукометрічних баз,
+29 входять до міжнародних наукометричних баз,
 13 статей опубліковано у матеріалах конференцій.
 
 
